ansible_playbooks/rke2-cluster/roles/kyverno/files/policies/clusterpolicy-block-namespace-with-tld.yaml
---

apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: block-namespace-with-tld
  annotations:
    policies.kyverno.io/title: Block Namespace Creation with TLD
    policies.kyverno.io/category: Namespace Governance
    kyverno.io/kyverno-version: 1.6.2
    policies.kyverno.io/minversion: 1.6.0
    policies.kyverno.io/subject: Namespace
    policies.kyverno.io/description: >-
      Prevents the creation of namespaces whose names end with a top-level domain
      such as .com, .org, .net, .io, and others. This helps avoid confusion with
      internet domain names and enforces naming standards within the cluster.
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: deny-tld-namespaces
      match:
        any:
          - resources:
              kinds:
                - Namespace
      validate:
        message: "Namespaces cannot have names ending with a top-level domain."
        pattern:
          metadata:
            name: "!*.com|!*.org|!*.net|!*.io|!*.co|!*.gov|!*.edu|!*.mil|!*.biz|!*.info|!*.xyz|!*.tech|!*.dev|!*.app|!*.ai|!*.me|!*.us|!*.uk|!*.ca|!*.au|!*.de|!*.jp|!*.fr|!*.in|!*.cn"
